@@ -241,6 +241,9 @@ typedef enum { // program menu positions
   PRF_LOG_WINDOW,
   PRF_LOG_LIMIT,
 
+  PRF_DBG_SERIAL,
+  PRF_DBG_SYSLOG,
+
   PRF_MIN_TEMP,
   PRF_MAX_TEMP,
   PRF_MAX_HOUS_TEMP,
@@ -257,6 +260,7 @@ const char *PrefsName[]={
 "NTP_Server1","NTP_Server2","NTP_Server3","GMT_Offset_sec","Daylight_Offset_sec","Initial_Date","Initial_Time",
 "PID_Window","PID_Kp","PID_Ki","PID_Kd","PID_POE","PID_Temp_Threshold",
 "LOG_Window","LOG_Files_Limit",
+"DBG_Serial","DBG_Syslog",
 "MIN_Temperature","MAX_Temperature","MAX_Housing_Temperature","Thermal_Runaway","Alarm_Timeout",
 };
 
@@ -295,9 +299,14 @@ File CSVFile,LOGFile;
 const char *PVer = "PIDKiln v1.1";
 const char *PDate = "2020.02.19";
 
+// If defined debug - do debug, otherwise comment out all debug lines
 #define DBG if(DEBUG)
-#define DBG_TYPE serial
-//#define DBG_TYPE syslog
+
+// Empty syslog instance
+WiFiUDP udpClient;
+Syslog syslog(udpClient, SYSLOG_PROTO_IETF);
+#define SYSLOG_SERVER "192.168.70.100"
+#define SYSLOG_PORT 514
 
 #define JS_JQUERY "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
 #define JS_CHART "https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.bundle.min.js"
